--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oi&display=swap" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <title>Stratos</title>
 </head>
 
 <body>
